[package]
name = "caffeinate"
version = "0.1.0"
authors = ["Ryan Schmukler <rschmukler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam-channel = "0.3.9"
signal-hook = {version = "0.1.10"}
ctrlc = "3.1.3"
